feat: add word, word group api
